Added all preview images of extensions in JupyterLab extension section

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -134,11 +134,11 @@ navbar_gray: false
                                         <img src="./assets/jupyterlab-page/extensions/running-icon.svg" class="lab-ext-preview-about-icon"/>
                                         <h4 class="lab-ext-preview-about-title">Running Sessions</h4>
                                     </div>
-                                    <h5 class="lab-ext-preview-about-desc">Organizing and accessing your files has never been easier. Quickly find files, see running notebooks, and distinguish between different file types at a glance.</h5>
+                                    <h5 class="lab-ext-preview-about-desc">Convienently access all current running sessions in the docpanel. Quick access to kernel shutdown makes it easy to take control of your working environment.</h5>
                                 </div>
                             </div>
                             <div id="tab-5" class="lab-ext-preview-content">
-                                <img src="./assets/jupyterlab-page/extensions/file-browser-preview.png" class="lab-ext-preview-img">
+                                <img src="./assets/jupyterlab-page/extensions/cell-tools-preview.png" class="lab-ext-preview-img">
                                 <div class="lab-ext-preview-about">
                                     <div class="lab-ext-preview-about-head">
                                         <img src="./assets/jupyterlab-page/extensions/cell-tools-icon.svg" class="lab-ext-preview-about-icon"/>
@@ -148,7 +148,7 @@ navbar_gray: false
                                 </div>
                             </div>
                             <div id="tab-6" class="lab-ext-preview-content">
-                                <img src="./assets/jupyterlab-page/extensions/file-browser-preview.png" class="lab-ext-preview-img">
+                                <img src="./assets/jupyterlab-page/extensions/tab-manager-preview.png" class="lab-ext-preview-img">
                                 <div class="lab-ext-preview-about">
                                     <div class="lab-ext-preview-about-head">
                                         <img src="./assets/jupyterlab-page/extensions/tab-manager-icon.svg" class="lab-ext-preview-about-icon"/>
@@ -158,7 +158,7 @@ navbar_gray: false
                                 </div>
                             </div>
                             <div id="tab-7" class="lab-ext-preview-content">
-                                <img src="./assets/jupyterlab-page/extensions/file-browser-preview.png" class="lab-ext-preview-img">
+                                <img src="./assets/jupyterlab-page/extensions/launcher-preview.png" class="lab-ext-preview-img">
                                 <div class="lab-ext-preview-about">
                                     <div class="lab-ext-preview-about-head">
                                         <img src="./assets/jupyterlab-page/extensions/launcher-icon.svg" class="lab-ext-preview-about-icon"/>
