Created notebook feature section in JupyterLab page. Added parallax effect.

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -203,5 +203,43 @@ navbar_gray: false
             </div>
         </div>
     </section>
+    <section>
+        <div id="lab-notebook-parallax" lass="section-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="lab-notebook-paper">
+                            <img src="./assets/jupyterlab-page/book_running.svg" class="lab-notebook-logo"/>
+                            <h3>A better notebook experience.</h2>
+                            <div class="lab-notebook-cell">
+                                <h4 class="lab-notebook-cell-prompt">In [<span class="lab-notebook-cell-prompt-number"> </span>]:</h4>
+                                <div class="lab-notebook-cell-input">
+                                    <p class="lab-notebook-cell-input-text">showFeatures()</p>
+                                </div>
+                            </div>
+                            <div class="lab-notebook-cell-output">
+                                <h4 class="lab-notebook-cell-output-text">Edit multiple notebooks at once</h4>
+                                <h4 class="lab-notebook-cell-output-text">Cell drag and drop</h4>
+                                <h4 class="lab-notebook-cell-output-text">Cell collapsing</h4>
+                                <h4 class="lab-notebook-cell-output-text">Vega & Vega-Lite integration</h4>
+                                <h4 class="lab-notebook-cell-output-text">Speed improvements</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="section-grey">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
