Finished styling the more features section for desktop

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -235,7 +235,63 @@ navbar_gray: false
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                    
+                        <h3 class="lab-features-header">Even more features</h3>
+                        <div class="lab-features-card-container">
+                            <div class="lab-feature-card">
+                                <div class="lab-feature-card-header code-console">
+                                    <img src="./assets/jupyterlab-page/more-features/code-console-card-icon.svg" class="lab-feature-card-icon"/>
+                                </div>
+                                <div class="lab-feature-card-text">
+                                    <h4>Code Console</h4>
+                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                </div>
+                            </div>
+                            <div class="lab-feature-card">
+                                <div class="lab-feature-card-header terminal">
+                                    <img src="./assets/jupyterlab-page/more-features/terminal-card-icon.svg" class="lab-feature-card-icon"/>
+                                </div>
+                                <div class="lab-feature-card-text">
+                                    <h4>Built-in Terminal</h4>
+                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                </div>
+                            </div>
+                            <div class="lab-feature-card">
+                                <div class="lab-feature-card-header text-editor">
+                                    <img src="./assets/jupyterlab-page/more-features/text-editor-card-icon.svg" class="lab-feature-card-icon"/>
+                                </div>
+                                <div class="lab-feature-card-text">
+                                    <h4>Built-in Text Editor</h4>
+                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                </div>
+                            </div>
+                            <div class="lab-feature-card">
+                                <div class="lab-feature-card-header themeable">
+                                    <img src="./assets/jupyterlab-page/more-features/themeable-card-icon.svg" class="lab-feature-card-icon"/>
+                                </div>
+                                <div class="lab-feature-card-text">
+                                    <h4>Themeable</h4>
+                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                </div>
+                            </div>
+                            <div class="lab-feature-card">
+                                <div class="lab-feature-card-header csv">
+                                    <img src="./assets/jupyterlab-page/more-features/csv-viewer-card-icon.svg" class="lab-feature-card-icon"/>
+                                </div>
+                                <div class="lab-feature-card-text">
+                                    <h4>CSV Viewer</h4>
+                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                </div>
+                            </div>
+                            <div class="lab-feature-card">
+                                <div class="lab-feature-card-header img-viewer">
+                                    <img src="./assets/jupyterlab-page/more-features/image-viewer-card-icon.svg" class="lab-feature-card-icon"/>
+                                </div>
+                                <div class="lab-feature-card-text">
+                                    <h4>Image Viewer</h4>
+                                    <p>A scratchpad for code that makes data visualizations interactive</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
