Added initial implementation of the collaboration section on jupyterlab page, added animation to onscroll for notebook section on lab page

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -297,5 +297,27 @@ navbar_gray: false
             </div>
         </div>
     </section>
+    <section>
+        <div class="section-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 lab-collab-preview">
+                        <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
+                        <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
+                    </div>
+                    <div class="col-md-6 lab-collab-about">
+                        <h3 class="section-header section-header-left">Real-time<br/> collaboration</h3>
+                        <h5 class="lab-collab-about-desc">Create something great together using the built-in Google Drive extension and chat application</h5>
+                        <span class="lab-collab-coming-soon">COMING SOON</span>
+                        <ul class="lab-collab-preview-nav">
+                            <li class="lab-collab-preview-nav-item nav-active">Share files through Google Drive</li>
+                            <li class="lab-collab-preview-nav-item">Work in real-time with others</li>
+                            <li class="lab-collab-preview-nav-item">Per-document chat</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
