Added rest of content to JupyterLab page, finished initial implementation of JupyterLab native screen

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -329,10 +329,33 @@ navbar_gray: false
     </section>
     <section>
         <div class="section-grey">
-            <div class="container">
+            <div class="container-fluid lab-native">
                 <div class="row">
                     <div class="col-sm-12">
-                        
+                        <img src="./assets/lab-native-logo.png" class="section-icon img-responsive"/>
+                        <h3 class="col-sm-12 section-header">JupyterLab Native</h3>
+                        <p class="col-sm-12 support-paragraph">A desktop application that unlocks a galaxy of possibilities.</p>
+                        <img class="lab-native-img img-responsive" src="./assets/lab-native-desktop-preview.png"/>
+                    </div>
+                    <div class="lab-native-features">
+                        <div class="col-sm-4 lab-native-feature">
+                            <img src="./assets/lab-native-platform-img.svg" class="lab-native-feature-img"/>
+                            <h4 class="lab-native-feature-header">Cross Platform</h4>
+                            <p class="lab-native-feature-desc">JupyterLab Native is built to run natively on Mac, Windows, and Linux</p>
+                        </div>
+                        <div class="col-sm-4 lab-native-feature">
+                            <img src="./assets/lab-native-server-img.svg" class="lab-native-feature-img"/>
+                            <h4 class="lab-native-feature-header">Server Management</h4>
+                            <p class="lab-native-feature-desc">Easily connect and manage your servers with the built-in server manager</p>
+                        </div>
+                        <div class="col-sm-4 lab-native-feature">
+                            <img src="./assets/lab-native-space-img.svg" class="lab-native-feature-img"/>
+                            <h4 class="lab-native-feature-header">More work space</h4>
+                            <p class="lab-native-feature-desc">No browser? No problem. By using the native application, there is more room for your content</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 lab-native-download">
+                        <a class="orange-button lab-native-download-btn" href="https://github.com/jupyterlab/jupyterlab_app" target="_blank">Download from GitHub</a>
                     </div>
                 </div>
             </div>
