Changed space in the jumbotron to match the space in the notebook description section further down page, restyled and rethought the top jumbotron to include the jupyterlab logo, removed wordmark from the loader on the app. The jumbotron and first section are now mobile friendly

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -8,8 +8,8 @@ navbar_gray: false
     <div class="header lab-jumbotron">
         <div class="container">
             <div class="row">
-                <img src="assets/jupyterlab_white.svg" class="lab-header-logo"/>
                 <div class="col-xs-12 lab-header">
+                    <img class="lab-header-logo" src="./assets/JupyterLabLogo-withPlanet-inverse.svg"/>
                     <h2 class="lab-header-title">The Complete Workspace</h2>
                     <p class="lab-header-subhead">for writing code, analyzing data, and sharing results.</p>
                 </div>
@@ -28,7 +28,6 @@ navbar_gray: false
                                 <div id="moon3" class="moon orbit">
                                     <div class="planet"></div>
                                 </div>
-                                <img src="assets/JupyterLabWordmark.png" class="lab-wordmark"/>
                             </div>
                         </div>
                     </div>
@@ -49,20 +48,20 @@ navbar_gray: false
                     <div class="col-sm-12 lab-overview-desc">
                         <h4>JupyterLab was created to be the all-in-one workspace for data science, scientific computing, and analytical research. It provides the power, speed and flexibility to get more work done.</h4>
                     </div>
-                    <div class="lab-overview-features">
-                        <div class="col-xs-4 lab-overview-feature">
+                    <ul class="lab-overview-features">
+                        <li class="col-xs-12 col-sm-4 lab-overview-feature">
                             <img src="./assets/jupyterlab-everyone-icon.svg"/>
                             <h5 class="lab-overview-feature-title">Made for everyone</h5>
-                        </div>
-                        <div class="col-xs-4 lab-overview-feature">
+                        </li>
+                        <li class="col-xs-12 col-sm-4 lab-overview-feature">
                             <img src="./assets/jupyterlab-extensible-icon.svg"/>
                             <h5 class="lab-overview-feature-title">Extensible</h5>
-                        </div>
-                        <div class="col-xs-4 lab-overview-feature">
+                        </li>
+                        <li class="col-xs-12 col-sm-4 lab-overview-feature">
                             <img src="./assets/jupyterlab-customize-icon.svg"/>
                             <h5 class="lab-overview-feature-title">Customizable</h5>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -71,7 +70,7 @@ navbar_gray: false
         <div class="section-grey">
             <div class="container">
                 <div class="row lab-docpanel-overview">
-                    <div class="col-sm-5">
+                    <div class="col-xs-12 col-sm-5">
                         <img src="./assets/jupyterlab-docpanel-head-img.svg"/>
                         <h3 class="section-header section-header-left">Docpanel</h3>
                         <h5 class="lab-docpanel-desc">In JupyterLab, everything you do is held in one place: the docpanel.</h5>
@@ -80,7 +79,7 @@ navbar_gray: false
                             No problem, JupyterLab and the docpanel remember your previous session to get you up and running from launch.
                         </h5>
                     </div>
-                    <div class="col-sm-7">
+                    <div class="col-xs-12 col-sm-7">
                         <img class="lab-docpanel-img" src="./assets/jupyterlab-docpanel-img.png"/>
                     </div>
                 </div>
@@ -204,7 +203,7 @@ navbar_gray: false
         </div>
     </section>
     <section>
-        <div id="lab-notebook-parallax" data-parallax="scroll" data-image-src="./assets/jupyterlab-space-bg.jpeg" data-natural-width="1200" data-natural-height="800" data-bleed="100" class="section-white">
+        <div id="lab-notebook-parallax" data-parallax="scroll" data-image-src="./assets/jupyterlab-space-bg.jpg" data-natural-width="1200" data-natural-height="800" data-bleed="100" class="section-white">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
