Initial styling and implementation of extensions viewer on mobile

--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -70,7 +70,7 @@ navbar_gray: false
         <div class="section-grey">
             <div class="container">
                 <div class="row lab-docpanel-overview">
-                    <div class="col-xs-12 col-sm-5">
+                    <div class="col-xs-12 col-sm-5 lab-docpanel-header">
                         <img src="./assets/jupyterlab-docpanel-head-img.svg"/>
                         <h3 class="section-header section-header-left">Docpanel</h3>
                         <h5 class="lab-docpanel-desc">In JupyterLab, everything you do is held in one place: the docpanel.</h5>
