--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -300,19 +300,19 @@ navbar_gray: false
         <div class="section-white">
             <div class="container">
                 <div class="row">
-                    <div id="collab-preview-tab-1" class="col-md-6 lab-collab-preview preview-active">
+                    <div id="collab-preview-tab-1" class="col-sm-6 lab-collab-preview preview-active">
                         <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
                         <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
                     </div>
-                    <div id="collab-preview-tab-2" class="col-md-6 lab-collab-preview">
+                    <div id="collab-preview-tab-2" class="col-sm-6 lab-collab-preview">
                         <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
                         <p class="lab-collab-preview-text">Work with others in real-time through JupyterLab no matter where you are</p>
                     </div>
-                    <div id="collab-preview-tab-3" class="col-md-6 lab-collab-preview">
+                    <div id="collab-preview-tab-3" class="col-sm-6 lab-collab-preview">
                         <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
                         <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
                     </div>
-                    <div class="col-md-6 lab-collab-about">
+                    <div class="col-sm-6 lab-collab-about">
                         <h3 class="section-header section-header-left">Real-time<br/> collaboration</h3>
                         <h5 class="lab-collab-about-desc">Create something great together using the built-in Google Drive extension and chat application</h5>
                         <span class="lab-collab-coming-soon">COMING SOON</span>
