--- a/jupyterlab.html
+++ b/jupyterlab.html
@@ -305,7 +305,7 @@ navbar_gray: false
                         <p class="lab-collab-preview-text">Share documents through JupyterLab’s Google Drive extension</p>
                     </div>
                     <div id="collab-preview-tab-2" class="col-sm-6 lab-collab-preview">
-                        <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/share-files.png"/>
+                        <img class="lab-collab-preview-img img-responsive" src="./assets/jupyterlab-page/collaboration/realtime-edit.svg"/>
                         <p class="lab-collab-preview-text">Work with others in real-time through JupyterLab no matter where you are</p>
                     </div>
                     <div id="collab-preview-tab-3" class="col-sm-6 lab-collab-preview">
